# tsuki

./: .gitignore  .gitmodules  Cargo.toml  README.md
boards/: boards.json
boards/esp32/v1.0.0/: README.md  sandbox.json  tsukiboard.toml
boards/esp8266/v1.0.0/: README.md  ports.json  sandbox.json  tsukiboard.toml
cli/: go.mod
cli/cmd/tsuki/: main.go
cli/internal/boardmgr/: boardmgr.go
cli/internal/check/: check.go
cli/internal/cli/: annotations.go  boards.go  build.go  check.go  config.go  init.go  monitor.go  pkg.go  root.go  simulate.go  upload.go  webkit.go
cli/internal/config/: config.go
cli/internal/core/: core.go
cli/internal/flash/: flash.go
cli/internal/manifest/: manifest.go
cli/internal/pkgmgr/: pkgmgr.go
cli/internal/scaffold/: board.go  pkg.go  prompt.go  registry.go  render.go  spec.go
cli/internal/scaffold/templates/: board_readme.md.tmpl  circuit_tsuki_circuit.tmpl  godotinolib.toml.tmpl  main_go.tmpl  pkg_readme.md.tmpl  tsuki_board_toml.tmpl  tsuki_example_json.tmpl
cli/internal/ui/: ui.go
docs/: PLAN.md  SKILL.md  WIP.md
docs/skill/: SKILL.md
docs/skill/agents/: flash-agent.md  ide-agent.md  pkg-agent.md  transpiler-agent.md
docs/skill/examples/: blink.go  dht-sensor.go  esp32-wifi.go
docs/skill/references/: board-platforms.md  design-system.md  error-codes.md
docs/skill/scripts/: check-invariants.py  new-board.sh  new-package.sh
docs/superpowers/plans/: 2026-04-05-board-platforms.md
flash/: boards.rs  detect.rs  error.rs  lib_manager.rs  main.rs  sdk.rs  serial_monitor.rs
flash/compile/: avr.rs  cache.rs  esp.rs  mod.rs  rp2040.rs
flash/cores/: avr.rs  mod.rs
flash/flash/: avrdude.rs  esptool.rs  mod.rs
ide/: next.config.js  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
ide/src-tauri/: Cargo.toml  tauri.conf.json
ide/src-tauri/src/: main.rs  pty_session.rs  simulator.rs  win_proc.rs
ide/src/app/: globals.css  layout.tsx  page.tsx
ide/src/components/docs/: DocsComponents.tsx  DocsData.tsx  DocsPrimitives.tsx  DocsScreen.tsx
ide/src/components/other/: BoardInstallModal.tsx  BottomPanel.tsx  CodeEditor.tsx  ExamplesSidebar.tsx  ExeWarningModal.tsx  ExportWorkstation.tsx  FileExplorer.tsx  FilesSidebar.tsx  MigrationModal.tsx  NewProjectModal.tsx  OnboardingModal.tsx  PackagesSidebar.tsx  PlatformsSidebar.tsx  PortSelectModal.tsx  ProfilesPanel.tsx  SerialMonitor.tsx  WhatsNewModal.tsx
ide/src/components/screens/: IdeScreen.tsx  SettingsScreen.tsx  SplashScreen.tsx  WelcomeScreen.tsx
ide/src/components/shared/: AppChrome.tsx  ContextMenu.tsx  ErrorBoundary.tsx  TitleBar.tsx  TsukiLogo.tsx  primitives.tsx
ide/src/lib/: boardPackages.ts  highlight.ts  i18n.ts  iconPacks.tsx  packageRegistry.ts  simBridge.ts  store.ts  tauri.ts  themes.ts  useSimulator.ts
ide/src/locales/: en.json  es.json
pkg/: boards.json  packages.json
pkg/bmp280/: README.md
pkg/bmp280/v1.0.0/: godotinolib.toml
pkg/boards/d1_mini/v1.0.0/: board.toml
pkg/boards/esp32s2/v1.0.0/: board.toml
pkg/boards/esp8266/v1.0.0/: board.toml
pkg/boards/lolin_d1_mini/v1.0.0/: board.toml
pkg/boards/nodemcu/v1.0.0/: board.toml
pkg/boards/pro_mini_3v3/v1.0.0/: board.toml
pkg/boards/pro_mini_5v/v1.0.0/: board.toml
pkg/boards/uno/v1.0.0/: board.toml
pkg/dht/: README.md
pkg/dht/v1.0.0/: godotinolib.toml
pkg/due/v1.0.0/: board.toml
pkg/esp32/v1.0.0/: board.toml
pkg/esp32c3/v1.0.0/: board.toml
pkg/hcsr04/: README.md
pkg/hcsr04/v1.0.0/: godotinolib.toml
pkg/irremote/: README.md
pkg/irremote/v1.0.0/: godotinolib.toml
pkg/keys/: index.json
pkg/l298n/: README.md
pkg/l298n/v1.0.0/: godotinolib.toml
pkg/leonardo/v1.0.0/: board.toml
pkg/mega/v1.0.0/: board.toml
pkg/micro/v1.0.0/: board.toml
pkg/mpu6050/: README.md
pkg/mpu6050/v1.0.0/: godotinolib.toml
pkg/nano/v1.0.0/: board.toml
pkg/nano_old/v1.0.0/: board.toml
pkg/pkg/: packages.json
pkg/pkg/boards/d1_mini/: README.md
pkg/pkg/boards/due/: README.md
pkg/pkg/boards/esp32/: README.md
pkg/pkg/boards/esp32c3/: README.md
pkg/stepper/: README.md
pkg/stepper/v1.0.0/: godotinolib.toml
pkg/u8g2/: README.md
pkg/u8g2/v1.0.0/: godotinolib.toml
pkg/ws2812/: README.md
pkg/ws2812/v1.0.0/: godotinolib.toml
src/: error.rs  lib.rs  main.rs
src/checker/: infer.rs  mod.rs  reporter.rs  scope.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  mod.rs
src/python/: ast.rs  lexer.rs  mod.rs  parser.rs  transpiler.rs
src/runtime/: mod.rs  pkg_loader.rs  pkg_manager.rs
src/simulator/: mod.rs
src/transpiler/: config.rs  mod.rs
tools/: build.py  build_legacy.py  package.py  pkg_manager.py
(+111 files in other folders)
