[package]
name = "tsuki-ide"
version = "1.2.0"
description = "tsuki IDE — Write Go, Flash Arduino"
authors = ["tsuki-team"]
license = "MIT"
repository = ""
default-run = "tsuki-ide"
edition = "2021"
rust-version = "1.60"

[[bin]]
name = "tsuki-ide"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
  "shell-execute",
  "shell-open",
  "fs-read-file",
  "fs-write-file",
  "fs-read-dir",
  "fs-create-dir",
  "fs-remove-dir",
  "fs-remove-file",
  "fs-rename-file",
  "fs-exists",
  "dialog-open",
  "dialog-save",
  "path-all",
  "window-close",
  "window-hide",
  "window-show",
  "window-maximize",
  "window-minimize",
  "window-unmaximize",
  "window-unminimize",
  "window-start-dragging",
] }
reqwest  = { version = "0.11", features = ["json", "rustls-tls", "stream"], default-features = false }
futures-util = "0.3"
tsuki_core  = { path = "../../", package = "tsuki" }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "process", "sync", "time"] }
which       = "6"
portable-pty = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level       = 3
lto             = "thin"
codegen-units   = 1
strip           = "symbols"
panic           = "abort"
overflow-checks = false
debug           = false

[profile.dist]
inherits        = "release"
opt-level       = "z"
lto             = "fat"
codegen-units   = 1
strip           = true
panic           = "abort"
